--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -15,6 +15,7 @@
 		  [class.selected]="hero === selectedHero" 
 		  (click)="onSelect(hero)">
 		    <span class="badge">{{hero.id}}</span> {{hero.name}}
+		    <span style="color: red;">{{hero.highPriority?'High Priority':''}}</span>		    
 	  </li>
 	</ul>
 	<div *ngIf="selectedHero">
