--- a/app/dashboard.component.html
+++ b/app/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>Top Notes</h3>
 <div class="grid grid-pad">
-  <div *ngFor="let hero of heroes" (click)="gotoDetail(hero)" class="col-1-4">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
+  <div *ngFor="let note of notes" (click)="gotoDetail(note)" class="col-1-4">
+    <div class="module note">
+      <h4>{{note.name}}</h4>
     </div>
   </div>
 </div>
