--- a/app/notes.component.html
+++ b/app/notes.component.html
@@ -1,14 +1,14 @@
-<h2>My Notes</h2>
+<h2>All Notes</h2>
 	<ul class="notes">
 	  <!-- The (*) prefix to ngFor indicates that the <li> element and its children constitute a master template. -->
-	  <!-- The let keyword before "hero" identifies hero as a template input variable. 
-	  We can reference this variable within the template to access a hero’s properties. 
+	  <!-- The let keyword before "note" identifies note as a template input variable. 
+	  We can reference this variable within the template to access a note’s properties. 
 	  https://angular.io/docs/ts/latest/guide/displaying-data.html#!#ngFor
 	  -->
-	  <!-- The key is the name of the CSS class (selected). The value is true if the two heroes match 
-	  and false otherwise. We’re saying “apply the selected class if the heroes match, remove it if they don’t”. 
+	  <!-- The key is the name of the CSS class (selected). The value is true if the two notes match 
+	  and false otherwise. We’re saying “apply the selected class if the notes match, remove it if they don’t”. 
 	  Notice in the template that the class.selected is surrounded in square brackets ([]). This is the syntax for 
-	  a property binding, a binding in which data flows one way from the data source (the expression hero === selectedHero) 
+	  a property binding, a binding in which data flows one way from the data source (the expression note === selectedNote) 
 	  to a property of class. https://angular.io/docs/ts/latest/guide/template-syntax.html#!#property-binding
 	  -->
 	  <li *ngFor="let note of notes" 	 
@@ -21,7 +21,7 @@
 	<div *ngIf="selectedNote">
 	  <h2>
 	    <!--  https://angular.io/docs/ts/latest/guide/pipes.html  -->
-	    {{selectedNote.name | uppercase}} is my note
+	    Tick below to edit {{selectedNote.name | uppercase}}
 	  </h2>
 	  <button (click)="gotoDetail()">View Details</button>
 	</div>	
