--- a/app/note-detail.component.css
+++ b/app/note-detail.component.css
@@ -1,6 +1,6 @@
 label {
   display: inline-block;
-  width: 3em;
+  width: 5em;
   margin: .5em 0;
   color: #607D8B;
   font-weight: bold;
@@ -10,6 +10,11 @@ input {
   font-size: 1em;
   padding-left: .4em;
 }
+
+input[type='checkbox'] {
+  height: 1em;
+}
+
 button {
   margin-top: 20px;
   font-family: Arial;
