Add quiz view. Get questions by fixed index.

--- a/app/components/question/question.component.html
+++ b/app/components/question/question.component.html
@@ -14,9 +14,9 @@
 	  a property binding, a binding in which data flows one way from the data source (the expression note === selectedNote) 
 	  to a property of class. https://angular.io/docs/ts/latest/guide/template-syntax.html#!#property-binding
 	  -->
-	  <li *ngFor="let question of questions">
+	 <!--  <li *ngFor="let question of questions">
 		    <span class="badge">{{question.id}}</span> {{question.text}}
-	  </li>
+	  </li> -->
 	</ul>
 
 <a routerLink="/answer" >Answer</a>
