Rename answers to answer group. Restructure answer group to contain ids of linked answers. Create answer model. Fix race condition bug where random question couldn’t always be fetched (as questions had not yet been fetched);

--- a/app/components/quiz/quiz.component.html
+++ b/app/components/quiz/quiz.component.html
@@ -27,10 +27,10 @@
 
  <h5>Please select from these answers</h5>
 
- <p>{{relevantAnswers.text}}</p>
+ <p>{{answerGroup.text}}</p>
 
 <!-- Add [checked]="idx === 0" to input to have first item selected -->
- 	  <li *ngFor="let item of relevantAnswers.items; let idx = index">
+ 	  <li *ngFor="let item of answerGroup.items; let idx = index">
 		    <span class="badge">{{item}}</span> 
 		    <input type="radio" name="radiogroup"
 		     
